--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>michelleacidtv</title>
+    <title>Michelle Acid TV</title>
+    <!-- Link to Google Fonts Xolonium -->
+    <link href="https://fonts.googleapis.com/css2?family=Xolonium&display=swap" rel="stylesheet">
+    <style>
+        /* Apply Xolonium font */
+        body {
+            background-color: black;
+            color: white;
+            font-family: 'Xolonium', sans-serif; /* Use Xolonium font */
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 3em;
+        }
+
+        p {
+            font-size: 1.2em;
+        }
+    </style>
 </head>
 <body>
-    <h1>Coming Soon</h1>
+    <h1>Welcome to Michelle Acid TV!</h1>
+    <p>Enjoy the content.</p>
 </body>
 </html>
