--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michelle Acid TV</title>
+    <title>michelleacidtv</title>
     <!-- Link to Google Fonts Xolonium -->
     <link href="https://fonts.googleapis.com/css2?family=Xolonium&display=swap" rel="stylesheet">
     <style>
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to Michelle Acid TV!</h1>
-    <p>Enjoy the content.</p>
+    <h1>michelleacidtv</h1>
+    <p>coming soon</p>
 </body>
 </html>
