--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         /* Apply Xolonium font */
         body {
             background-color: black;
-            color: white;
+            color: pink;
             font-family: 'Xolonium', sans-serif; /* Use Xolonium font */
             margin: 0;
             padding: 0;
