--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </head>
     <body>
     <div class="image-container">
-            <img src="images/coming-soon.jpg" alt="coming-soon.jpg" width="300" class="large" />
+            <img src="https://github.com/michelleacidtv/michelleacidtv/blob/main/coming-soon.jpg?raw=true" alt="coming-soon.jpg" width="300" class="large" />
             <a href="https://www.youtube.com/@michelleacidtv" class="button">></a>
         </div>
     </body>
