--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>michelleacidtv</title>
+        <link rel="icon" type="image/png" href="https://github.com/michelleacidtv/michelleacidtv/blob/main/favicon.png?raw=true">
         <!-- Link to Google Fonts Xolonium -->
         <link href="https://fonts.googleapis.com/css2?family=Xolonium&display=swap" rel="stylesheet" />
         <style>
