--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
     </div>   
     
     <div class="tv-container">
-        <img src="untitled%20folder/a0948206569_100%20copy.jpg" alt="TV Frame" class="tv-frame">
+        <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/tv.jpg" alt="TV Frame" class="tv-frame">
         
 <video class="tv-screen" id="tv-video-orange" controls controlsList="nodownload" preload="auto" style="display: none;">
     <source src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/images%20copy/Orange%20(uploaded)%20copy.mp4" type="video/mp4">
