--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 <body>
     
     <div id="loadingScreen">
-        <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/images copy/giphy.gif" alt="Loading Animation">
+        <img src="https://github.com/michelleacidtv/michelleacidtv/raw/main/images%20copy/giphy.gif" alt="Loading Animation">
     </div>   
     
     <div class="tv-container">
