--- a/index.html
+++ b/index.html
@@ -426,23 +426,23 @@
         <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/tv.jpg" alt="TV Frame" class="tv-frame">
         
 <video class="tv-screen" id="tv-video-orange" controls controlsList="nodownload" preload="auto" style="display: none;">
-    <source src="images copy/Orange (uploaded) copy.mp4" type="video/mp4">
+    <source src="https://github.com/michelleacidtv/michelleacidtv/raw/main/images%20copy/Orange%20(uploaded)%20copy.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 <video class="tv-screen" id="tv-video-tokyo" controls controlsList="nodownload" preload="auto" style="display: none;">
-    <source src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/images%20copy/Tokyo%20(uploaded)%20copy.mp4" type="video/mp4">
+    <source src="https://github.com/michelleacidtv/michelleacidtv/raw/main/images%20copy/Tokyo%20(uploaded)%20copy.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 <video class="tv-screen" id="tv-video-wink" controls controlsList="nodownload" preload="auto" style="display: none;">
-    <source src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/images%20copy/Wink%20(uploaded)%20copy.mp4" type="video/mp4">
+    <source src="https://github.com/michelleacidtv/michelleacidtv/raw/main/images%20copy/Wink%20(uploaded)%20copy.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 <video class="tv-screen" id="tv-video-younme" controls controlsList="nodownload" preload="auto" style="display: none;">
-    <source src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/images%20copy/Younme%20(uploaded)%20copy.mp4" type="video/mp4">
+    <source src="https://github.com/michelleacidtv/michelleacidtv/raw/main/images%20copy/Younme%20(uploaded)%20copy.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 <video class="tv-screen" id="tv-video-mechanical" controls controlsList="nodownload" preload="auto" style="display: none;">
-    <source src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/images%20copy/Mech%20Wom%20(Uploaded)%20copy.mp4" type="video/mp4">
+    <source src="https://github.com/michelleacidtv/michelleacidtv/raw/main/images%20copy/Mech%20Wom%20(Uploaded)%20copy.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
         
