--- a/index.html
+++ b/index.html
@@ -36,13 +36,22 @@
             transition: opacity 4s ease-out;
         }
         #loadingScreen img {
-            max-width: 100%;
-            max-height: 100%;
+            width: 100%;
+            height: 100%;
             object-fit: cover;
         }
 
         #loadingScreen.fade-out {
             opacity: 0;
+        }
+        @media (max-width: 768px) {
+        #loadingScreen {
+        width: 100vw;
+        height: 100vh;
+        }
+
+        #loadingScreen img {
+        object-fit: cover;
         }
         .tv-container {
             position: relative;
