--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
             border-radius: 5px;
             background: black;
         }
+    @media (max-width: 768px) {
+        .tv-container {
+        width: 100vw;  /* Ensure container is full width on smaller devices */
+        padding: 0 10px; /* Add padding to prevent overflow */
+    }
+
+        .tv-screen {
+        top: 10%;      /* Adjust the position on smaller screens */
+        left: 10%;     /* Adjust the position on smaller screens */
+        width: 70%;    /* Scale down the width on smaller devices */
+        height: auto;  /* Keep aspect ratio */
+    }
         .remote-container {
             position: absolute;
             left: -23%; /* Adjust to bring the remote into view */
