--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             top: 16%; /* Adjust to fit the TV screen */
             left: 13%; /* Adjust to fit the TV screen */
             width: 76%; /* Adjust based on the screen size in the image */
-            height: auto; /* Keep aspect ratio */
+            height: 55%; /* Keep aspect ratio */
             aspect-ratio: 4 / 3; /* Ensures 4:3 ratio */
             object-fit: contain; /* Ensures it fills the screen properly */
             border-radius: 5px;
