--- a/index.html
+++ b/index.html
@@ -798,6 +798,8 @@
 
 <img id="imageToToggle" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/album1.png" alt="Image" onclick="toggleImage()" class="resized-image" />
 
+<img id="smileimage" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/smile.png" alt="Smile" class="Smile" />
+        
 </div>
 
 <script>
