--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
         top: -66px; /* Adjust vertical positioning */
         transform: translateX(-37%); /* Center the button properly */
         }
+        .button.orange:hover {
+        background-color: initial !important;  /* Reset to default */
+        filter: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+        box-shadow: none !important;
+    }
     }
     @media screen and (max-width: 844px) and (orientation: landscape) {
     .button.orange {
@@ -223,6 +230,13 @@
         top: -94px; /* Adjust vertical positioning */
         transform: translateX(-426%); /* Center the button properly */
         }
+        .button.youtube:hover {
+        background-color: initial !important;  /* Reset to default */
+        filter: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+        box-shadow: none !important;
+    }
     }
 @media screen and (max-width: 844px) and (orientation: landscape) {
     .button.youtube {
