--- a/index.html
+++ b/index.html
@@ -687,7 +687,8 @@
     height: auto;  /* Maintain aspect ratio */
     transform: translate(403px, -610px);
     position: absolute; 
-  }  
+  }
+@supports (-webkit-touch-callout: none) {
     @media (max-width: 768px) {
     .resized-image {
     width: 195px;  /* Reduce size for mobile */
@@ -700,6 +701,7 @@
         top: -10%; /* Missing semicolon fixed */
         transform: translate(219px, 40px); /* Adjust position */
     }
+}
 }
 
         /* CD Initial Position (Starts on the Right) */
