--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         left: 76%;  /* Adjust horizontal position */
     }
 }
-        @media screen and (max-width: 844px) and (orientation: landscape) {
+    @media (max-width: 844px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
     /* Adjust the remote container to fit smaller screens */
         .remote-container {
         left: -36%; /* Adjust left positioning for smaller screens */
