--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
         .remote-container {
         left: -36%; /* Adjust left positioning for smaller screens */
         bottom: -20%; /* Adjust bottom positioning */
+        border: 5px solid red !important; /* Add border to visually confirm */
     }
 
         .remote-container img {
