--- a/index.html
+++ b/index.html
@@ -728,6 +728,7 @@
             transform: scale(0.2); /* Shrinks to simulate insertion */
             opacity: 0; /* Fades out */
         }
+    @supports (-webkit-touch-callout: none) {
         @media (max-width: 768px) {
         .cd {
         width: 73px; /* Reduce size for mobile */
@@ -737,10 +738,11 @@
 }
         @media (max-width: 844px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
         .cd {
-        width: 67px; /* Reduce width for mobile */
-        top: -3%; /* Missing semicolon fixed */
-        transform: translate(-29px, 37px); /* Adjust position */
+        width: 7vw; 
+        top: 3vh; 
+        transform: translate(-0.4vw, 4.3vh); 
     }
+}
 }
         #smileimage {
             position: absolute;
