--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             position: fixed;
             top: 0;
             left: 0;
-            width: 100vw;
+            width: 100lvw;
             height: 100dvh;
             background-color: black; /* Ensures a smooth transition */
             display: flex;
