--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
         .cd {
         width: 7vw; 
         top: 3vh; 
-        transform: translate(-0.4vw, 4.3vh); 
+        left: 62vw;
     }
 }
 }
