--- a/index.html
+++ b/index.html
@@ -736,9 +736,9 @@
 }
         @media (max-width: 844px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
         .cd {
-        width: 7vw; 
-        top: 3vh; 
-        left: 50vw;
+        width: 7lvw; 
+        top: 3dvh; 
+        left: 65lvw;
     }
 }
 }
