--- a/index.html
+++ b/index.html
@@ -700,6 +700,7 @@
         width: 18lvw; /* Reduce width for mobile */
         top: -10dvh; /* Missing semicolon fixed */
         left: 45lvw
+        position: absolute; 
     }
 }
 }
