--- a/index.html
+++ b/index.html
@@ -683,12 +683,12 @@
     }
 }
   .resized-image {
-    width: 220px;  /* Set the width of the image */
+    width: 227px;  /* Set the width of the image */
     height: auto;  /* Maintain aspect ratio */
-    transform: translate(403px, -610px);
-    position: absolute; 
+    transform: translate(405px, -617px);
+    position: absolute;
   }
-@media (max-width: 390px) {
+@media (max-width: 768px) {
     .resized-image {
         width: 50vw;  /* Adjust width to 50% of viewport width (responsive size) */
         left: 38vw;   /* Center the image horizontally on the screen */
@@ -697,7 +697,7 @@
         transform: none;  /* Remove the translate, as we're now using left/top */
     }
 }
-@media (max-width: 750px) and (orientation: landscape) {
+@media (max-width: 850px) and (orientation: landscape) {
     .resized-image {
         width: 19vw;  /* Set width to 30% of the viewport width in landscape */
         left: 47vw;   /* Adjust the image's left position (centered for landscape) */
@@ -736,11 +736,11 @@
         top: 100%; /* Slightly adjust vertical position */
     }
 }
-        @media (max-width: 844px) and (max-aspect-ratio: 16/9) {
+        @media screen and (max-width: 844px) and (orientation: landscape) {
         .cd {
-        width: 7lvw; 
-        top: 3dvh; 
-        left: 65lvw;
+        width: 7vw; /* Reduce width for mobile */
+        top: 8vh; /* Missing semicolon fixed */
+        left: 62vw;
     }
 }
         #smileimage {
