--- a/index.html
+++ b/index.html
@@ -1228,13 +1228,13 @@ border: double
         
         <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/cd.png" alt="CD" class="cd">
 
-<img src="images/FullMoon2010.jpg" alt="moon" class="moon-image" />
+<img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/FullMoon2010.jpg" alt="moon" class="moon-image" />
         
 <a href="https://www.tiktok.com/@michellacidtv?is_from_webapp=1&sender_device=pc" target="_blank">
-<img src="images/tiktok.png" alt="tiktok" class="tiktokImage" />
+<img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/tiktok.png" alt="tiktok" class="tiktokImage" />
 </a>
 <a href="https://www.instagram.com/michelleacidtv/" target="_blank">
-  <img src="images/insta.png" alt="insta" class="instaImage" />
+  <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/insta.png" alt="insta" class="instaImage" />
 </a>
         <!-- Remote Image -->
         <div class="remote-container">
@@ -1263,13 +1263,13 @@ border: double
 
 <img id="smileimage" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/smile.png" alt="Smile" class="Smile" />
 
-<img src="images/wire.png" alt="Wire" class="wire-image" id="wireImage">
-<img src="images/wire.png" alt="Wire" class="wire2-image" id="wire2Image">
-<img src="images/computer.gif" alt="Animated Computer" class="computer-gif" />
-<img src="images/Trollface.png" alt="troll" class="trollface" />
+<img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/wire.png" alt="Wire" class="wire-image" id="wireImage">
+<img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/wire.png" alt="Wire" class="wire2-image" id="wire2Image">
+<img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/computer.gif" alt="Animated Computer" class="computer-gif" />
+<img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Trollface.png" alt="troll" class="trollface" />
 
 
-<img id="bigsmileimage" src="images/big-smile.png" alt="Big Smile" class="Big-smile" onclick="alert('you are here. keep clicking.')" />
+<img id="bigsmileimage" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/big-smile.png" alt="Big Smile" class="Big-smile" onclick="alert('you are here. keep clicking.')" />
 
 <div class="custom-text">hello? welcome. scroll down. </div>
 <div class="custom1-text">scroll down</div>
