--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,7 @@ border: double
 
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/wire.png" alt="Wire" class="wire-image" id="wireImage">
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/wire.png" alt="Wire" class="wire2-image" id="wire2Image">
-<img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/computer.gif" alt="Animated Computer" class="computer-gif" />
+<img src="https://media.githubusercontent.com/media/michelleacidtv/michelleacidtv/refs/heads/main/computer.gif" alt="Animated Computer" class="computer-gif" />
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Trollface.png" alt="troll" class="trollface" />
 
 
