--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
                 align-items: center; /* Vertically center content */
                 text-align: center;
             }
+            @font-face {
+  font-family: 'Xolonium';
+  src: url('Xolonium.woff2') format('woff2'),
+       url('Xolonium.woff') format('woff'),
+       url('Xolonium-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
         #loadingScreen {
             position: fixed;
             top: 0;
