--- a/index.html
+++ b/index.html
@@ -1281,7 +1281,7 @@ border: double
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/wire.png" alt="Wire" class="wire2-image" id="wire2Image">
 
 <video autoplay muted loop playsinline class="computer-gif">
-  <source src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/computer.mp4" type="video/mp4" />
+  <source src="computer.mp4" type="video/mp4" />
 </video>
         
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Trollface.png" alt="troll" class="trollface" />
