--- a/index.html
+++ b/index.html
@@ -1279,7 +1279,6 @@ border: double
 
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/wire.png" alt="Wire" class="wire-image" id="wireImage">
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/wire.png" alt="Wire" class="wire2-image" id="wire2Image">
-<img src="computer.gif" alt="Animated Computer" class="computer-gif" />
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Trollface.png" alt="troll" class="trollface" />
 
 
@@ -1296,6 +1295,10 @@ border: double
     
 <button id="clickmeButton" onclick="countClicks()">??????</button>
 <p id="clickCount">Clicks: 0</p>
+
+<video autoplay muted loop playsinline class="computer-gif">
+  <source src="computer.mp4" type="video/mp4" />
+</video>
 
 <script>
     function toggleImage() {
