--- a/index.html
+++ b/index.html
@@ -1297,7 +1297,7 @@ border: double
 <p id="clickCount">Clicks: 0</p>
 
 <video autoplay muted loop playsinline class="computer-gif">
-  <source src="computer.mp4" type="video/mp4" />
+  <source src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/computer.mp4" type="video/mp4" />
 </video>
 
 <script>
