--- a/index.html
+++ b/index.html
@@ -1297,7 +1297,7 @@ border: double
 <p id="clickCount">Clicks: 0</p>
 
 <video autoplay muted loop playsinline class="computer-gif">
-  <source src="https://github.com/michelleacidtv/michelleacidtv/raw/main/computer.mp4" type="video/mp4" />
+  <source src="computer.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
 
