--- a/index.html
+++ b/index.html
@@ -1280,6 +1280,7 @@ border: double
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/wire.png" alt="Wire" class="wire-image" id="wireImage">
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/wire.png" alt="Wire" class="wire2-image" id="wire2Image">
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Trollface.png" alt="troll" class="trollface" />
+<img src="computer.gif" alt="Animated Computer" class="computer-gif" />
 
 
 <img id="bigsmileimage" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/big-smile.png" alt="Big Smile" class="Big-smile" onclick="alert('you are here. keep clicking.')" />
@@ -1295,11 +1296,6 @@ border: double
     
 <button id="clickmeButton" onclick="countClicks()">??????</button>
 <p id="clickCount">Clicks: 0</p>
-
-<video autoplay muted loop playsinline class="computer-gif">
-  <source src="computer.mp4" type="video/mp4" />
-  Your browser does not support the video tag.
-</video>
 
 <script>
     function toggleImage() {
