--- a/index.html
+++ b/index.html
@@ -1461,11 +1461,16 @@ border: double
     const quoteText = document.getElementById("quoteText");
 
     const quotes = [
-        "You run faster when you see the end in sight - Unknown",
-        "Resist nothing - Eckhart Tolle",
-        "Confront what you're avoiding - Unknown",
-        "He who writes for fools always finds a large public - Arthur Schopenhauer",
-        "Nothing you do can add anything to what you already have - Eckhart Tolle",
+        "You run faster when you see the end in sight",
+        "Resist nothing",
+        "Observe the mind. Smile at it",
+        "Confront what you are avoiding",
+        "He who writes for fools always finds a large public",
+        "All discipline begins in the body",
+        "Nothing real can be threatened",
+        "Real love never ends",
+        "Don't wait to start living",
+        "Nothing you do can add anything to what you already have",
     ];
 
     quoteButton.addEventListener("click", function (event) {
