--- a/index.html
+++ b/index.html
@@ -1342,6 +1342,14 @@ border: double
 <button id="clickmeButton" onclick="countClicks()">??????</button>
 <p id="clickCount">Clicks: 0</p>
 
+    <form id="contact-form">
+        <label for="email">Enter E-mail for Updates:</label>
+        <input type="email" id="email" name="email" required>
+        <button type="submit">Go</button>
+    </form>
+
+    <div id="status-message"></div> 
+
 <script>
     function toggleImage() {
         var image = document.getElementById('imageToToggle');
