--- a/index.html
+++ b/index.html
@@ -1463,7 +1463,7 @@ transform: scale(1.1);
 <body>
     
     <div id="loadingScreen">
-        <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/gifs/loading50.gif" alt="Loading Animation">
+        <img src="https://michelleacidtv.github.io/michelleacidtv/gifs/loading50.gif" alt="Loading Animation">
     </div> 
     
 <div id="mobile-warning">
