--- a/index.html
+++ b/index.html
@@ -1463,7 +1463,7 @@ transform: scale(1.1);
 <body>
     
     <div id="loadingScreen">
-        <img src="https://drive.google.com/uc?export=view&id=1z5Dis27EsA0DzVIgB4ShJ9PYWBCo8Ptx/view?usp=sharing" alt="Loading Animation">
+        <img src="https://drive.google.com/uc?export=view&id=1z5Dis27EsA0DzVIgB4ShJ9PYWBCo8Ptx" alt="Loading Animation">
     </div> 
     
 <div id="mobile-warning">
